--- a/client/scss/cards/_main.scss
+++ b/client/scss/cards/_main.scss
@@ -17,11 +17,6 @@
     flex-wrap: no-wrap;
     width: 100%;
     height: 100%;
-    // background-size: 60% 60%;
-    // background-position: 160% bottom;
-    // background-repeat:  no-repeat;
-    // background-attachment: fixed;
-    // background-image: url("../img/nav.svg"); 
   }
 
   &-card {
@@ -31,6 +26,7 @@
     transition: flex .2s ease-in-out;
     position: relative;
     width: 0%;
+    height: 100%;
     flex: 1 1 40%;
     background-color: rgba(256, 256, 256, 0.8);
 
@@ -90,14 +86,6 @@
         font-size: 1.4rem;
         font-family: 'Raleway', sans-serif;
       }
-      .super {
-        text-align: left;
-        margin: 0;
-        font-size: 4vw;
-        font-family: 'Raleway', sans-serif;
-      }
-
     }
-
   }
 }
