--- a/client/scss/cards/_wedding.scss
+++ b/client/scss/cards/_wedding.scss
@@ -41,7 +41,6 @@
         }
       }
 
-
       .schedule {
         display: flex;
         flex-wrap: wrap;
@@ -84,13 +83,17 @@
         }
       }
     }
-  }
-  #map {
-    width: 100%;
-    height: 30rem;
-    background-color: transparent;
-    @include breakpoint($bp--sm) {
+
+    & > .map {
       height: 100%;
+      #map {
+        width: 100%;
+        height: 30rem;
+        background-color: transparent;
+        @include breakpoint($bp--sm) {
+          height: 100%;
+        }
+      }
     }
   }
 }
